# tenq

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: AAPL-data-only-sample.md
tenq/: __init__.py  brief.py  cli.py  dossier.py  edgar.py  llm.py  market.py
tests/: conftest.py  test_brief.py  test_edgar.py  test_llm.py
