[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tenq"
version = "0.1.0"
description = "An AI equity analyst that actually reads the filings — cited research briefs from SEC EDGAR primary sources."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Shah Alam Baig" }]
keywords = ["sec", "edgar", "equity-research", "llm", "ai", "investing", "10-k", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "requests>=2.28",
    "anthropic>=0.40",
]

[project.optional-dependencies]
market = ["yfinance>=0.2.40"]
dev = ["pytest>=7"]

[project.scripts]
tenq = "tenq.cli:main"

[project.urls]
Homepage = "https://github.com/shahcolate/tenq"
Issues = "https://github.com/shahcolate/tenq/issues"

[tool.hatch.build.targets.wheel]
packages = ["tenq"]
